# agentic-ai-workshop-march-2026

./: .gitignore  README.md
docs/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs/_astro/: Code.oPdG8PJB.css  Search.astro_astro_type_script_index_0_lang.rz5yYMd9.js  _basePickBy.CyI45RVG.js  _baseUniq.COUyX6nJ.js  arc.DaJ4UDrj.js  architectureDiagram-2XIMDMQ5.CwtX6OU2.js  blockDiagram-WCTKOSBZ.A-YwefyQ.js  c4Diagram-IC4MRINW.D6JWFrj3.js  channel.BYb6iY0a.js  chunk-4BX2VUAB.BUVIdQWs.js  chunk-55IACEB6.xXVvwWEE.js  chunk-FMBD7UC4.DLTCIQl8.js  chunk-JSJVCQXG.IB4Mcgkz.js  chunk-KX2RTZJC.D-afZdPf.js  chunk-NQ4KR5QH.BFM5aQoY.js  chunk-QZHKN3VN.DXg06HgO.js  chunk-WL4C6EOR.El-su2d9.js  classDiagram-v2-RAHNMMFH.DHveYhKA.js  clone.be_tMfOC.js  common.5fNgNEUo.css  cose-bilkent-S5V4N54A.B42o--Y3.js  dagre-KLK3FWXG.Bxh2RAbV.js  diagram-E7M64L7V.t9OSx-Y5.js  diagram-IFDJBPK2.wjH8vigz.js  diagram-P4PSJMXO.B1rCaByT.js  erDiagram-INFDFZHY.BsZ0Cdgk.js  flowDiagram-PKNHOUZH.CZmKxHWl.js  graph.hUUzHdL6.js  (+24 more)
presentation/: package.json
website/: astro.config.mjs  package-lock.json  package.json
workshop/: .gitignore  pyproject.toml  requirements.txt
workshop/module_00_setup/: verify_setup.py
workshop/module_01_first_agent/: agent.py
workshop/module_02_tools_mcp/: agent_with_mcp.py  mcp_server.py  tools.py
workshop/module_03_memory/: agent_with_memory.py
workshop/module_04_multi_agent/: triage_agent.py
workshop/module_05_evals/: eval_report.json  eval_suite.py
workshop/module_06_deploy/: Dockerfile  app.py  app_fastapi.py
workshop/shared/: data.py  model.py
(+50 files in other folders)
